static/css/agency.css
/* ... */
.navbar-default .navbar-toggle {
    border-color: #e38105;
    background-color: #e38105;
}

.navbar-default .navbar-toggle .icon-bar {
    background-color: #fff;
}

.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
    background-color: #e38105;
}

.navbar-default .nav li a {
    text-transform: uppercase;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 400;
    letter-spacing: 1px;
    color: #fff;
}

.navbar-default .nav li a:hover,
.navbar-default .nav li a:focus {
    outline: 0;
    color: #e38105;
}

.navbar-default .navbar-nav>.active>a {
    border-radius: 0;
    color: #fff;
    background-color: #e38105;
}

.navbar-default .navbar-nav>.active>a:hover,
.navbar-default .navbar-nav>.active>a:focus {
    color: #fff;
    background-color: #fba943;
}

@media(min-width:768px) {
    .navbar-default {
        padding: 5px 0;
        border: 0;
        background: -webkit-linear-gradient(bottom, rgba(34, 34, 34, 0), rgba(34, 34, 34, 1)); /* For Safari 5.1 to 6.0 */
        background: -o-linear-gradient(bottom, rgba(34, 34, 34, 0), rgba(34, 34, 34, 1)); /* For Opera 11.1 to 12.0 */
        background: -moz-linear-gradient(bottom, rgba(34, 34, 34, 0), rgba(34, 34, 34, 1)); /* For Firefox 3.6 to 15 */
        background: linear-gradient(bottom, rgba(34, 34, 34, 0), rgba(34, 34, 34, 1)); /* Standard syntax */
        -webkit-transition: padding .3s;
        -moz-transition: padding .3s;
        transition: padding .3s;
    }

    .navbar-default .navbar-brand {
        font-size: 2em;
        -webkit-transition: all .3s;
        -moz-transition: all .3s;
        transition: all .3s;
    }

    .navbar-default .navbar-nav>.active>a {
        border-radius: 3px;
    }

    .navbar-default.navbar-shrink {
        padding: 10px 0;
        background-color: #222;
    }

    .navbar-default.navbar-shrink .navbar-brand {
        font-size: 1.5em;
    }

    .navbar-nav>li>a {
      padding-right: 10px;
      padding-left: 10px;
      font-size: 11px;
    }
}

@media(min-width:870px) {
  .navbar-nav>li>a {
    font-size: 13px;
  }
}


@media(min-width:992px) {
  .navbar-nav>li>a {
    padding-right: 15px;
    padding-left: 15px;
    font-size: inherit;
  }
}

header.hero {
    text-align: center;
    color: #fff;
    background-attachment: scroll;
    background-image: url(../img/header-bg.jpg);
    background-position: center center;
    background-repeat: none;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}

header.hero .intro-text {
    padding-top: 100px;
    padding-bottom: 50px;
    text-shadow: 1px 2px 3px black;
}

header.hero .intro-text .intro-lead-in {
    margin-bottom: 25px;
    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 22px;
    font-style: italic;
    line-height: 22px;
}

header.hero .intro-text .intro-heading {
    margin-bottom: 25px;
    text-transform: uppercase;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 30px;
    font-weight: 700;
    line-height: 50px;
}

header.small-header {
  min-height: 100px;
}

@media(min-width:768px) {
    header.hero .intro-text {
        padding-top: 200px;
        font-size: 50px;
        padding-bottom: 50px;
    }

    header.hero .intro-text .intro-lead-in {
        margin-bottom: 25px;
        font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
        font-size: 40px;
        font-style: italic;
        line-height: 40px;
    }

    header.hero .intro-text .intro-heading {
        margin-bottom: 50px;
        text-transform: uppercase;
        font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
        font-size: 75px;
        font-weight: 700;
        line-height: 75px;
    }
}

section {
    padding-top: 50px;
    padding-bottom: 20px;
}

section h2.section-heading {
    margin-top: 0;
    margin-bottom: 15px;
    font-size: 30px;
}

section h3.section-subheading {
    margin-bottom: 25px;
    text-transform: none;
    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 16px;
    font-style: italic;
    font-weight: 400;
    padding-top: 2em;
    padding-bottom: 3em;
}

@media(min-width:768px) {
    section {
        padding-top: 50px;
        padding-bottom: 50px;
    }

    section h2.section-heading {
      font-size: 40px;
    }
}

.service-heading {
    margin: 15px 0;
    text-transform: none;
    text-decoration: underline;
}

#portfolio .portfolio-item {
    right: 0;
    margin: 0 0 15px;
}

#portfolio .portfolio-item .portfolio-link {
    display: block;
    position: relative;
    margin: 0 auto;
}

#portfolio .portfolio-item .portfolio-link .portfolio-hover {
    position: absolute;
    width: 100%;
    height: 100%;
    opacity: 0;
    background: rgba(254,209,54,.9);
    -webkit-transition: all ease .5s;
    -moz-transition: all ease .5s;
    transition: all ease .5s;
}

#portfolio .portfolio-item .portfolio-link img {
    margin-left: auto;
    margin-right: auto;
    display: block;
    max-width: 200px;
    height: 200px;
    padding-bottom: 15px;
}

@media(min-width:768px) {
    #portfolio .portfolio-item .portfolio-link img {
        max-width: 250px;
        height: 250px;
    }
}

#portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
    opacity: 1;
}

#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
    position: absolute;
    top: 50%;
    width: 100%;
    height: 20px;
    margin-top: -12px;
    text-align: center;
    font-size: 20px;
    color: #fff;
}

#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content i {
    margin-top: -12px;
}
/* ... */

